Fixed small bug

--- a/brevets/templates/calc.html
+++ b/brevets/templates/calc.html
@@ -190,7 +190,7 @@
 												miles: $(obj).find("input[name='miles']").val(),
 												km: $(obj).find("input[name='km']").val(),
 												startTime: $(obj).find("input[name='open']").val(),
-												closeTime: $(obj).find("input[name='open']").val()
+												closeTime: $(obj).find("input[name='close']").val()
 											});
 										}
 									});
